RESOLVED FIXED49673
readPixels should generate INVALID_ENUM if only one of type/format mismatch UNSIGNED_BYTE/RGBA
https://bugs.webkit.org/show_bug.cgi?id=49673
Summary readPixels should generate INVALID_ENUM if only one of type/format mismatch U...
Zhenyao Mo
Reported 2010-11-17 10:40:28 PST
If both of them mismatch, the error should be INVALID_OPERATION, but if only one of them mismatch, it should be INVALID_ENUM. Currently it generates INVALID_OPERATION in both cases.
Attachments
patch (8.27 KB, patch)
2010-11-17 13:15 PST, Zhenyao Mo
zmo: commit-queue-
revised patch: fix the style issue (8.36 KB, patch)
2010-11-17 13:34 PST, Zhenyao Mo
kbr: review+
zmo: commit-queue-
Zhenyao Mo
Comment 1 2010-11-17 13:15:41 PST
Created attachment 74147 [details] patch Test is copied from khronos, but one part is commented out as it causes TIMEOUT and it's not related to the bug anyway.
WebKit Review Bot
Comment 2 2010-11-17 13:17:54 PST
Attachment 74147 [details] did not pass style-queue: Failed to run "['WebKitTools/Scripts/check-webkit-style', '--diff-files', u'LayoutTests/ChangeLog', u'LayoutTests/fast/canvas/webgl/read-pixels-test.html', u'WebCore/ChangeLog', u'WebCore/html/canvas/WebGLRenderingContext.cpp']" exit_code: 1 WebCore/html/canvas/WebGLRenderingContext.cpp:2296: An else if statement should be written as an if statement when the prior "if" concludes with a return, break, continue or goto statement. [readability/control_flow] [4] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Zhenyao Mo
Comment 3 2010-11-17 13:34:03 PST
Created attachment 74149 [details] revised patch: fix the style issue
Kenneth Russell
Comment 4 2010-11-22 14:36:53 PST
Comment on attachment 74149 [details] revised patch: fix the style issue Looks good to me.
Zhenyao Mo
Comment 5 2010-11-23 08:51:37 PST
Note You need to log in before you can comment on or make changes to this bug.