2010-11-17  Zhenyao Mo  <zmo@google.com>

Reviewed by Kenneth Russell.

        readPixels should generate INVALID_ENUM if only one of type/format mismatch UNSIGNED_BYTE/RGBA
        https://bugs.webkit.org/show_bug.cgi?id=49673

        Test: fast/canvas/webgl/read-pixels-test.html

        * html/canvas/WebGLRenderingContext.cpp:
        (WebCore::WebGLRenderingContext::readPixels):
2010-11-17  Zhenyao Mo  <zmo@google.com>

        Reviewed by Kenneth Russell.

        readPixels should generate INVALID_ENUM if only one of type/format mismatch UNSIGNED_BYTE/RGBA
        https://bugs.webkit.org/show_bug.cgi?id=49673

        * fast/canvas/webgl/read-pixels-test-expected.txt: Added.
        * fast/canvas/webgl/read-pixels-test.html: Added.


Canonical link: https://commits.webkit.org/63071@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@72610 268f45cc-cd09-0410-ab3c-d52691b4dbfc